Fix CelPaintFill, add CelPartOverlay, CelInkXerox, and CelAutoInk, other fixes